@@ -460,11 +460,8 @@ is($content, "INFO - Shu-wa-chi!\n");
 
 SKIP: {
   skip "Umask not supported on Win32", 3 if is_like_windows();
-
   my $oldumask = umask;
-  
   $testmkpathfile = File::Spec->catfile("${testpath}_1", "test26.log");
-  
   $data = <<EOT;
   log4j.category = INFO, FileAppndr
   log4j.appender.FileAppndr              = Log::Log4perl::Appender::File
@@ -474,18 +471,19 @@ SKIP: {
   log4j.appender.FileAppndr.mkpath       = 1
   log4j.appender.FileAppndr.mkpath_umask = 0027
 EOT
-  
   Log::Log4perl::init(\$data);
   $log = Log::Log4perl::get_logger("");
   $log->info("Shu-wa-chi!");
-  
   my ($dev,$ino,$mode,$nlink,$uid,$gid,$rdev,$size, $atime,$mtime,$ctime,$blksize,$blocks) = stat("${testpath}_1");
-  
   is($mode & 0777,0750); #Win32 777
-  
    ($dev,$ino,$mode,$nlink,$uid,$gid,$rdev,$size, $atime,$mtime,$ctime,$blksize,$blocks) = stat($testmkpathfile);
-  
   is($mode & 07777,0640); #Win32 666
-  
   is(umask,$oldumask);
 };
+
+reset_logger();
+
+sub reset_logger {
+  local $Log::Log4perl::Config::CONFIG_INTEGRITY_CHECK = 0; # to close handles and allow temp files to go
+  Log::Log4perl::init(\'');
+}
