@@ -5,7 +5,7 @@
 
 our $table_name = "log4perltest$$";
 
-BEGIN { 
+BEGIN {
     if($ENV{INTERNAL_DEBUG}) {
         require Log::Log4perl::InternalDebug;
         Log::Log4perl::InternalDebug->enable();
@@ -21,7 +21,7 @@ use Log4perlInternalTest qw(tmpdir min_version);
 
 BEGIN {
     min_version(qw( DBI DBD::CSV SQL::Statement ));
-    plan tests => 33;
+    plan tests => 11;
 }
 
 require DBI;
@@ -30,11 +30,11 @@ my $dbh = DBI->connect('DBI:CSV:f_dir='.$WORK_DIR,'testuser','testpw',{ RaiseErr
 
 my $stmt = <<EOL;
     CREATE TABLE $table_name (
-      loglevel     char(9) ,   
-      message   char(128),     
-      shortcaller   char(5),  
-      thingid    char(6),       
-      category  char(16),      
+      loglevel     char(9) ,
+      message   char(128),
+      shortcaller   char(5),
+      thingid    char(6),
+      category  char(16),
       pkg    char(16),
       runtime1 char(16),
       runtime2 char(16)
@@ -43,8 +43,8 @@ EOL
 
 $dbh->do($stmt);
 
-#creating a log statement where bind values 1,3,5 and 6 are 
-#calculated from conversion specifiers and 2,4,7,8 are 
+#creating a log statement where bind values 1,3,5 and 6 are
+#calculated from conversion specifiers and 2,4,7,8 are
 #calculated at runtime and fed to the $logger->whatever(...)
 #statement
 
@@ -59,7 +59,7 @@ log4j.appender.DBAppndr.sql = \\
    insert into $table_name \\
    (loglevel, message, shortcaller, thingid, category, pkg, runtime1, runtime2) \\
    values (?,?,?,?,?,?,?,?)
-log4j.appender.DBAppndr.params.1 = %p    
+log4j.appender.DBAppndr.params.1 = %p
 #---------------------------- #2 is message
 log4j.appender.DBAppndr.params.3 = %5.5l
 #---------------------------- #4 is thingid
@@ -69,7 +69,7 @@ log4j.appender.DBAppndr.params.6 = %C
 
 log4j.appender.DBAppndr.bufferSize=2
 log4j.appender.DBAppndr.warp_message=0
-    
+
 #noop layout to pass it through
 log4j.appender.DBAppndr.layout    = Log::Log4perl::Layout::NoopLayout
 
@@ -88,21 +88,17 @@ Log::Log4perl::init(\$config);
 
 my $logger = Log::Log4perl->get_logger("groceries.beer");
 
-
 $logger->fatal('fatal message',1234,'foo',{aaa => 'aaa'});
 
 #since we ARE buffering, that message shouldnt be there yet
-{
- local $/ = undef;
- open (F, "$WORK_DIR/$table_name");
- my $got = <F>;
- close F;
+my $file = File::Spec->catfile($WORK_DIR, $table_name);
+SKIP: {
+ skip 'no file is fine', 1 if !-f $file;
+ my $got = read_table($file);
  my $expected = <<EOL;
 LOGLEVEL,MESSAGE,SHORTCALLER,THINGID,CATEGORY,PKG,RUNTIME1,RUNTIME2
 EOL
-  $got =~ s/[^\w ,"()]//g;  #silly DBD_CSV uses funny EOL chars
   $expected =~ s/[^\w ,"()]//g;
-  $got = lc $got;   #accounting for variations in DBD::CSV behavior
   $expected = lc $expected;
   is($got, $expected, "buffered");
 }
@@ -111,22 +107,12 @@ $logger->warn('warning message',3456,'foo','bar');
 
 #with buffersize == 2, now they should write
 {
- local $/ = undef;
- open (F, "$WORK_DIR/$table_name");
- my $got = <F>;
- close F;
- my $expected = <<EOL;
-LOGLEVEL,MESSAGE,SHORTCALLER,THINGID,CATEGORY,PKG,RUNTIME1,RUNTIME2
-FATAL,"fatal message",main:,1234,groceries.beer,main,foo,HASH(0x84cfd64)
-WARN,"warning message",main:,3456,groceries.beer,main,foo,bar
-EOL
-  $got =~ s/[^\w ,"()]//g;  #silly DBD_CSV uses funny EOL chars
-  $expected =~ s/[^\w ,"()]//g;
-  $got =~ s/HASH\(.+?\)//;
-  $expected =~ s/HASH\(.+?\)//;
-  $got = lc $got; #accounting for variations in DBD::CSV behavior
-  $expected = lc $expected;
-  is($got, $expected, "buffersize=2");
+my $sth = $dbh->prepare("select * from $table_name");
+$sth->execute;
+my $got = $sth->fetchrow_arrayref;
+is_deeply [ @$got[0..6] ], [ 'FATAL', "fatal message", 'main:', 1234, 'groceries.beer', 'main', 'foo' ];
+$got = $sth->fetchrow_arrayref;
+is_deeply $got, [ 'WARN', "warning message", 'main:', 3456, 'groceries.beer', 'main', 'foo', 'bar' ], "buffersize=2" or diag explain $got;
 }
 
 
@@ -135,49 +121,28 @@ $logger->debug('debug message',99,'foo','bar');
 $logger->warn('warning message with two params',99, 'foo', 'bar');
 $logger->warn('another warning to kick the buffer',99, 'foo', 'bar');
 
-my $sth = $dbh->prepare("select * from $table_name"); 
+my $sth = $dbh->prepare("select * from $table_name");
 $sth->execute;
 
 #first two rows are repeats from the last test
 my $row = $sth->fetchrow_arrayref;
-is($row->[0], 'FATAL');
-is($row->[1], 'fatal message');
-is($row->[3], '1234');
-is($row->[4], 'groceries.beer');
-is($row->[5], 'main');
-is($row->[6], 'foo');
-like($row->[7], qr/HASH/); #verifying param checking for "filter=>sub{...} stuff
+is_deeply [ @$row[0..6] ], [ 'FATAL', "fatal message", 'main:', 1234, 'groceries.beer', 'main', 'foo' ];
+like $row->[7], qr/HASH/, 'verifying param checking for "filter=>sub{...}" stuff';
 
 $row = $sth->fetchrow_arrayref;
-is($row->[0], 'WARN');
-is($row->[1], 'warning message');
-is($row->[3], '3456');
-is($row->[4], 'groceries.beer');
-is($row->[5], 'main');
-is($row->[6], 'foo');
-is($row->[7], 'bar');
+is_deeply $row, [ 'WARN', 'warning message', 'main:', '3456', 'groceries.beer', 'main', 'foo', 'bar' ];
 
 #these two rows should have undef for the final two params
 $row = $sth->fetchrow_arrayref;
-is($row->[0], 'WARN');
-is($row->[1], 'warning message with two params');
-is($row->[3], '99');
-is($row->[4], 'groceries.beer');
-is($row->[5], 'main');
-is($row->[6], 'foo');
-is($row->[7], 'bar');
+is_deeply $row, [ 'WARN', 'warning message with two params', 'main:', 99, 'groceries.beer', 'main', 'foo', 'bar' ], '2 params';
 
 $row = $sth->fetchrow_arrayref;
-is($row->[0], 'WARN');
-is($row->[1], 'another warning to kick the buffer');
-is($row->[3], '99');
-is($row->[4], 'groceries.beer');
-is($row->[5], 'main');
-is($row->[6], 'foo');
-is($row->[7], 'bar');
-#that should be all
-ok(!$sth->fetchrow_arrayref);
+is_deeply $row, [ 'WARN', 'another warning to kick the buffer', 'main:', 99, 'groceries.beer', 'main', 'foo', 'bar' ], 'kick';
 
+#that should be all
+ok !$sth->fetchrow_arrayref, 'no more';
+
+$dbh->do("DROP TABLE $table_name");
 $dbh->disconnect;
 
 # **************************************
@@ -185,16 +150,15 @@ $dbh->disconnect;
 # might as well give it a thorough check
 Log::Log4perl->reset;
 
-unlink "$WORK_DIR/$table_name"
-    if -e "$WORK_DIR/$table_name";
+reset_logger();
 
 $dbh = DBI->connect('DBI:CSV:f_dir='.$WORK_DIR,'testuser','testpw',{ PrintError => 1 });
 
 $stmt = <<EOL;
     CREATE TABLE $table_name (
-      loglevel     char(9) ,   
-      message   char(128)     
-      
+      loglevel     char(9) ,
+      message   char(128)
+
   )
 EOL
 
@@ -209,12 +173,12 @@ log4j.appender.DBAppndr.sql = \\
    insert into $table_name \\
    (loglevel, message) \\
    values (?,?)
-log4j.appender.DBAppndr.params.1 = %p    
+log4j.appender.DBAppndr.params.1 = %p
 #---------------------------- #2 is message
 
 log4j.appender.DBAppndr.usePreparedStmt=2
 log4j.appender.DBAppndr.warp_message=0
-    
+
 #noop layout to pass it through
 log4j.appender.DBAppndr.layout    = Log::Log4perl::Layout::NoopLayout
 
@@ -228,19 +192,10 @@ $logger->fatal('warning message');
 
 #since we're not buffering, this message should show up immediately
 {
- local $/ = undef;
- open (F, "$WORK_DIR/$table_name");
- my $got = <F>;
- close F;
- my $expected = <<EOL;
-LOGLEVEL,MESSAGE
-FATAL,"warning message"
-EOL
-  $got =~ s/[^\w ,"()]//g;  #silly DBD_CSV uses funny EOL chars
-  $expected =~ s/[^\w ,"()]//g;
-  $got = lc $got; #accounting for variations in DBD::CSV behavior
-  $expected = lc $expected;
-  is($got, $expected);
+my $sth = $dbh->prepare("select * from $table_name");
+$sth->execute;
+my $got = $sth->fetchrow_arrayref;
+is_deeply $got, [ 'FATAL',"warning message" ], 'unbuffered shows immediately' or diag explain $got;
 }
 
 $logger->fatal('warning message');
@@ -248,12 +203,13 @@ $logger->fatal('warning message');
   # https://rt.cpan.org/Public/Bug/Display.html?id=79960
   # undef as NULL
 $dbh->do("DROP TABLE $table_name");
+
 $stmt = <<EOL;
     CREATE TABLE $table_name (
-      loglevel     char(9) ,   
+      loglevel     char(9) ,
       message   char(128),
       mdc char(16)
-      
+
   )
 EOL
 
@@ -267,13 +223,13 @@ log4j.appender.DBAppndr.sql = \\
    insert into $table_name \\
    (loglevel, mdc, message) \\
    values (?, ?, ?)
-log4j.appender.DBAppndr.params.1 = %p    
+log4j.appender.DBAppndr.params.1 = %p
 log4j.appender.DBAppndr.params.2 = %X{foo}
 #---------------------------- #3 is message
 
 log4j.appender.DBAppndr.usePreparedStmt=2
 log4j.appender.DBAppndr.warp_message=0
-    
+
 #noop layout to pass it through
 log4j.appender.DBAppndr.layout    = Log::Log4perl::Layout::NoopLayout
 
@@ -284,15 +240,23 @@ Log::Log4perl::init(\$config);
 $logger = Log::Log4perl->get_logger();
 $logger->warn('test message');
 
-open (F, "$WORK_DIR/$table_name");
-my $got = join '', <F>;
-close F;
+{
+my $sth = $dbh->prepare("select * from $table_name");
+$sth->execute;
+my $got = $sth->fetchrow_arrayref;
+is_deeply $got, [ 'WARN', "test message", '' ], "dbi insert with NULL values" or diag explain $got;
+}
 
-my $expected = <<EOT;
-loglevel,message,mdc
-WARN,"test message",
-EOT
+reset_logger();
 
-$got =~ s/[^\w ,"()]//g;  #silly DBD_CSV uses funny EOL chars
-$expected =~ s/[^\w ,"()]//g;
-is $got, $expected, "dbi insert with NULL values";
+sub reset_logger {
+  local $Log::Log4perl::Config::CONFIG_INTEGRITY_CHECK = 0; # to close handles and allow temp files to go
+  Log::Log4perl::init(\'');
+}
+
+sub read_table {
+  my ($file) = @_;
+  my $got = do {local $/; open my $f, $file or die "$file: $!"; <$f>};
+  $got =~ s/[^\w ,"()]//g;  #silly DBD_CSV uses funny EOL chars
+  lc $got;
+}
