@@ -4,7 +4,7 @@
 
 our $table_name = "log4perltest$$";
 
-BEGIN { 
+BEGIN {
     if($ENV{INTERNAL_DEBUG}) {
         require Log::Log4perl::InternalDebug;
         Log::Log4perl::InternalDebug->enable();
@@ -21,7 +21,7 @@ use Log4perlInternalTest qw(tmpdir min_version);
 
 BEGIN {
     min_version(qw( DBI DBD::SQLite ));
-    plan tests => 3;
+    plan tests => 1;
 }
 
 my $testdir = tmpdir();
@@ -36,7 +36,7 @@ my $dbh = DBI->connect("dbi:SQLite:dbname=$dbfile","","");
   # undef as NULL
 my $stmt = <<EOL;
     CREATE TABLE $table_name (
-      loglevel  char(9) ,   
+      loglevel  char(9) ,
       message   char(128),
       mdc       char(16)
   )
@@ -52,13 +52,13 @@ log4j.appender.DBAppndr.sql = \\
    insert into $table_name \\
    (loglevel, mdc, message) \\
    values (?, ?, ?)
-log4j.appender.DBAppndr.params.1 = %p    
+log4j.appender.DBAppndr.params.1 = %p
 log4j.appender.DBAppndr.params.2 = %X{foo}
 #---------------------------- #3 is message
 
 log4j.appender.DBAppndr.usePreparedStmt=2
 log4j.appender.DBAppndr.warp_message=0
-    
+
   #noop layout to pass it through
 log4j.appender.DBAppndr.layout    = Log::Log4perl::Layout::NoopLayout
 EOT
@@ -69,6 +69,7 @@ my $logger = Log::Log4perl->get_logger();
 $logger->warn('test message');
 
 my $ary_ref = $dbh->selectall_arrayref( "SELECT * from $table_name" );
-is $ary_ref->[0]->[0], "WARN", "level logged in db";
-is $ary_ref->[0]->[1], "test message", "msg logged in db";
-is $ary_ref->[0]->[2], undef, "msg logged in db";
+is_deeply $ary_ref->[0], ["WARN", "test message", undef], "data logged in db";
+
+$Log::Log4perl::Config::CONFIG_INTEGRITY_CHECK = 0; # to close handles and allow temp files to go
+Log::Log4perl::init(\'');
